完善可滑动的瀑布流控件

--- a/app/src/main/res/layout/activity_ruler.xml
+++ b/app/src/main/res/layout/activity_ruler.xml
@@ -8,8 +8,9 @@
 
     <com.lxy.androidstudy.customView.FlowLayout
         android:id="@+id/activity_flow"
+        android:layout_centerInParent="true"
         android:layout_width="match_parent"
-        android:layout_height="50dp">
+        android:layout_height="350dp">
 
     </com.lxy.androidstudy.customView.FlowLayout>
 </RelativeLayout>
